Added submit form for a new city w/ image, added header and footer partials

--- a/views/cities.ejs
+++ b/views/cities.ejs
@@ -1,6 +1,12 @@
+<!-- Header -->
+<% include partials/header %>
+
 <h1>These are the cities</h1>
 
-<% data.forEach(function(city){ %>
-    <img src="<%= city["image"] %>"/>
+<% citiesArr.forEach(function(city){ %>
+    <img src="<%= city["image"] %>">
     <li> <%= city["name"] %></li>
 <% }); %>
+
+<!-- Footer -->
+<% include partials/footer %>
