--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,4 +1,10 @@
+<!-- Header -->
+<% include partials/header %>
+
 <h1>Welcome to City Select!</h1>
 <h3>We crowdsource information about living and traveling in various cities in order to help your next move or vacation go smoothly!</h3>
 
-<a href="/cities">View all campgrounds</a>
+<a href="/cities">View all cities</a>
+
+<!-- Footer -->
+<% include partials/footer %>
