added nav and bootstrap elements

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,5 +1,6 @@
 <% include partials/header %>
 
+<a href="/cities">Back to the cities list</a>
 <h1>Submit another city:</h1>
 
 <form action="/cities" method="POST">
