--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,3 +11,17 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   </head>
   <body>
+      <!--Navbar-->
+    <nav class="navbar navbar-inverse bg-inverse">
+        
+        <a class="navbar-brand" href="/">City Select</a>
+        
+        <!-- Login Form-->
+        <form class="form-inline">
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+              <input type="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1">
+            </div>
+            <button class="btn btn-success m-2 m-sm-2" type="submit">Login</button>
+        </form>
+    </nav>
