--- a/views/cities.ejs
+++ b/views/cities.ejs
@@ -1,12 +1,31 @@
 <!-- Header -->
 <% include partials/header %>
 
-<h1>These are the cities</h1>
-
-<% citiesArr.forEach(function(city){ %>
-    <img src="<%= city["image"] %>">
-    <li> <%= city["name"] %></li>
-<% }); %>
+<div class="container">
+    
+    <header class="jumbotron">
+        <div class="container">
+            <h1>These are the cities</h1>    
+            
+            <p>
+                <a class="btn btn-primary btn-lrg" href="/cities/new">Click here to add a city!</a>
+            </p>
+        </div>
+    </header>
+    
+    <!-- Create a grid of city pics and names -->
+    <div class="row text-center" style="display: flex; flex-wrap: wrap">
+        <% citiesArr.forEach(function(city){ %>
+            <div class="col-md-4 col-sm-6">
+                <figure class="figure">
+                  <img src="<%= city["image"] %>" class="figure-img img-fluid rounded" alt="A picture of <%= city.name %>">
+                  <figcaption class="figure-caption font-weight-bold"> <%= city["name"] %> </figcaption>
+                </figure>
+            </div>
+            
+        <% }); %>
+    </div>
+</div>
 
 <!-- Footer -->
 <% include partials/footer %>
