--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,16 +12,24 @@
   </head>
   <body>
       <!--Navbar-->
-    <nav class="navbar navbar-inverse bg-inverse">
-        
-        <a class="navbar-brand" href="/">City Select</a>
-        
-        <!-- Login Form-->
-        <form class="form-inline">
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
-              <input type="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1">
-            </div>
-            <button class="btn btn-success m-2 m-sm-2" type="submit">Login</button>
-        </form>
+    <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse mb-2">
+        <!--Navbar toggle-->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!--Navbar items-->
+        <nav class="collapse navbar-collapse">
+            <!--Brand-->
+            <a class="navbar-brand" href="/">City Select</a>
+            
+            <!-- Right-justified Login Form-->
+            <form class="navbar-nav form-inline ml-auto">
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+                  <input type="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1">
+                </div>
+                <button class="btn btn-outline-success m-1 m-sm-1" type="submit">Login</button>
+            </form>   
+            
+        </nav>
     </nav>
