cleaned up the routes, header, footer, and show.ejs

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,6 +31,8 @@
                 <button class="btn btn-outline-success m-1 m-sm-1" type="submit">Login</button>
             </form>   
             
-        </nav>
+        </nav> <!-- End Navbar items -->
         
-    </nav>
+    </nav> <!-- End Navbar -->
+    
+    <div class="container text-center">
