--- a/views/new.ejs
+++ b/views/new.ejs
@@ -9,6 +9,7 @@
             <form action="/cities" method="POST">
                 <form class="form-group">
                     <input class="form-control my-2" name="name" type="text" placeholder="Name">
+                    <input class="form-control my-2" name="description" type="text" placeholder="Description">
                     <input class="form-control my-2" name="image" type="text" placeholder="Image">
                     <button class="btn btn-success btn-lg btn-block" type="submit">Submit!</button> 
                 </form>
