--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,12 @@
+    <br>
+    <br>
+    <br>
+    <footer>
+         <a href="gvenezia.com">Gaetano Venezia</a> ––– 2018 
+    </footer>
+    
     <!--End the container-->
     </div> 
-    
-    <footer>
-        Gaetano Venezia ——— gvenezia.com ––– 2018 
-    </footer>
     
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
