--- a/views/show.ejs
+++ b/views/show.ejs
@@ -3,11 +3,12 @@
 <div class="container">
     
     <div class="row text-center" style="display: flex; flex-wrap: wrap">
-        <div class="col-sm-10">
+        <div class="col-sm-10 justify-content-cente">
+            <h2><%= city.name %></h2>
+            
             <figure class="figure">
-              <img src="<%= city["image"] %>" class="figure-img img-fluid rounded" alt="A picture of <%= city.name %>">
-              <figcaption class="figure-caption font-weight-bold"> <%= city["name"] %> </figcaption>
-              <a href="/cities/<%= city._id %>" class="btn btn-sm btn-outline-info">More Info</a> 
+              <img src="<%= city.image %>" class="figure-img img-fluid rounded" alt="A picture of <%= city.name %>">
+              <figcaption class="figure-caption font-weight-bold"> <%= city.description %> </figcaption>
             </figure>
         </div>
     </div>
