added a css file, changed the nav bar styling, finished the comments route and added column styling to the show page

--- a/views/cities/index.ejs
+++ b/views/cities/index.ejs
@@ -1,12 +1,11 @@
 <!-- Header -->
-<% include partials/header %>
+<% include ../partials/header %>
 
 <div class="container">
     
     <header class="jumbotron">
         <div class="container">
             <h1>These are the cities</h1>    
-            
             <p>
                 <a class="btn btn-primary btn-lrg" href="/cities/new">Click here to add a city!</a>
             </p>
@@ -28,4 +27,4 @@
 </div>
 
 <!-- Footer -->
-<% include partials/footer %>
+<% include ../partials/footer %>
