--- a/views/cities/new.ejs
+++ b/views/cities/new.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 <a class="ml-2" href="/cities">Back to the cities list</a>
 <div class="container">
@@ -16,4 +16,4 @@
         </div>
     </div>
     
-<% include partials/footer %>
+<% include ../partials/footer %>
