--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,12 +7,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    
+    <!-- Local CSS -->
+    <link rel="stylesheet" href="/stylesheets/main.css">
   </head>
   <body>
       <!--Navbar-->
-    <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse mb-2">
+    <nav class="navbar navbar-toggleable-md navbar-inverse mb-2" id="main-nav">
         <!--Navbar toggle-->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -35,4 +41,4 @@
         
     </nav> <!-- End Navbar -->
     
-    <div class="container text-center">
+    <div class="container">
