--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,10 +1,13 @@
 <!-- Header -->
 <% include partials/header %>
 
-<h1>Welcome to City Select!</h1>
-<h3>We crowdsource information about living and traveling in various cities in order to help your next move or vacation go smoothly!</h3>
-
-<a href="/cities">View all cities</a>
+<div id="landing-container">
+    <img id="landing-image" src="https://www.japan-guide.com/thumb/destination_tokyo.jpg" alt="picture of Tokyo">
+    <h1 id="landing">Welcome to City Select!</h1>
+    <h3>We crowdsource information about living and traveling in various cities in order to help your next move or vacation go smoothly!</h3>
+    
+    <a href="/cities">View all cities</a>
+</div>
 
 <!-- Footer -->
 <% include partials/footer %>
