--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -41,4 +41,5 @@
         
     </nav> <!-- End Navbar -->
     
-    <div class="container">
+    <div class="container"> 
+    <!-- Eliminate container so that the landing page can have full width? -->
