added css styling and refactoring some html

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -2,11 +2,14 @@
 <% include partials/header %>
 
 <div id="landing-container">
-    <img id="landing-image" src="https://www.japan-guide.com/thumb/destination_tokyo.jpg" alt="picture of Tokyo">
-    <h1 id="landing">Welcome to City Select!</h1>
-    <h3>We crowdsource information about living and traveling in various cities in order to help your next move or vacation go smoothly!</h3>
-    
-    <a href="/cities">View all cities</a>
+    <img id="landing-image" src="https://media.timeout.com/images/103574446/image.jpg" alt="picture of Tokyo">
+    <div id="landing-text">
+        <h1 id="landing">Welcome to City Select!</h1>
+        <h3>We crowdsource information about living and traveling in various cities <br> in order to help your next move or vacation go smoothly!</h3>
+        
+        <a class="btn btn-warning btn-lg" href="/cities">View all cities</a>
+        
+    </div>
 </div>
 
 <!-- Footer -->
