--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,7 +18,7 @@
   </head>
   <body>
       <!--Navbar-->
-    <nav class="navbar navbar-toggleable-md navbar-inverse mb-2" id="main-nav">
+    <nav class="navbar navbar-toggleable-md navbar-inverse" id="main-nav">
         <!--Navbar toggle-->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -41,5 +41,3 @@
         
     </nav> <!-- End Navbar -->
     
-    <div class="container"> 
-    <!-- Eliminate container so that the landing page can have full width? -->
