added authentication routes for register, fixed some of the css styling and header contents

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -23,6 +23,10 @@
     font-family: Pacifico;
 }
 
+.container {
+    margin-top: 25px;
+}
+
 .container #landing-container {
     margin: 0px;
     padding: 0px;
