--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -13,7 +13,9 @@
                     <input class="form-control my-2" name="comment[author]" type="text" placeholder="Who's posting the comment?">
                     <button class="btn btn-success btn-lg btn-block" type="submit">Submit Comment!</button> 
                 </form>
+            </form>
         </div>
     </div>
+</div>
     
 <% include ../partials/footer %>
