--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,9 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     
+    <!-- Font Awesome 5 -->
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     
@@ -28,13 +31,22 @@
             <!--Brand-->
             <a class="navbar-brand" href="/">City Select</a>
             
-            <!-- Right-justified Login Form-->
+            <!-- Right-justified Login/Register Form-->
             <form class="navbar-nav form-inline ml-auto">
+                <!--Login-->
                 <div class="input-group">
                   <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
                   <input type="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1">
                 </div>
-                <button class="btn btn-outline-success m-1 m-sm-1" type="submit">Login</button>
+                <button class="btn btn-outline-success m-1 m-sm-1" type="submit">
+                  Login <i class="fas fa-sign-in-alt"></i>
+                </button>
+                
+                <!--Register-->
+                <a href="/register" class="btn btn-outline-warning m-1 m-sm-1" role="button">
+                  Register <i class="fas fa-user-plus"></i>
+                </a>
+                
             </form>   
             
         </nav> <!-- End Navbar items -->
