--- a/views/cities/index.ejs
+++ b/views/cities/index.ejs
@@ -1,7 +1,7 @@
 <!-- Header -->
 <% include ../partials/header %>
 
-<div class="container">
+<div class="container content-container">
     
     <header class="jumbotron">
         <div class="container">
