--- a/views/cities/show.ejs
+++ b/views/cities/show.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 
-<div class="container">
+<div class="container content-container">
     <div class="row">
         <!-- Smaller column with navigation -->
         <div class="col-md-3">
