--- a/views/cities/new.ejs
+++ b/views/cities/new.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header %>
 
 <a class="ml-2" href="/cities">Back to the cities list</a>
-<div class="container">
+<div class="container content-container">
     <h1 class="text-center">Submit another city:</h1>
     
     <div class="row justify-content-center">
@@ -15,5 +15,6 @@
                 </form>
         </div>
     </div>
+</div>
     
 <% include ../partials/footer %>
