--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -2,7 +2,7 @@
 
 <!--Add a comment-->
 <a class="ml-2" href="/cities/<%= city._id %>">Back to <%= city.name %>'s page </a>
-<div class="container">
+<div class="container content-container">
     <h1 class="text-center">Add a comment:</h1>
     
     <div class="row justify-content-center">
