fixed the login so that it goes back to the page you were just on instead of redirectting to index every time. Fixed the cities.js DESTROY route so that it redirects to the index page and doesn't hit the 404 error

--- a/views/cities/new.ejs
+++ b/views/cities/new.ejs
@@ -13,6 +13,7 @@
                     <input class="form-control my-2" name="image" type="text" placeholder="Image">
                     <button class="btn btn-success btn-lg btn-block" type="submit">Submit!</button> 
                 </form>
+            </form>
         </div>
     </div>
 </div>
