refactored all of the route functions to be arrow functions when appropriate, added some comments to the routes, added small styling changes to the 'add comment' button on the show page

--- a/views/cities/show.ejs
+++ b/views/cities/show.ejs
@@ -45,7 +45,7 @@
             <!-- Comments -->
             <div class="container bg-faded">
                 <!--Button to add a comment-->
-                <a href="/cities/<%= city._id %>/comments/new" class="btn btn-sm btn-info">Add a comment</a>
+                <a id="new-comment-btn" href="/cities/<%= city._id %>/comments/new" class="btn btn-info">Add a comment</a>
                 <hr />
                 
                 <!--Loop for the comments-->
