--- a/views/cities/edit.ejs
+++ b/views/cities/edit.ejs
@@ -1,6 +1,8 @@
 <% include ../partials/header %>
 
-<a class="ml-2" href="/cities">Back to <%= city.name %>'s page </a>
+<a class="ml-2" href="/cities">
+    <i class="fas fa-chevron-circle-left"></i> Back to <%= city.name %>'s page 
+</a>
 <div class="container content-container">
     <h1 class="text-center">Edit the information for <%= city.name %></h1>
     
