--- a/views/cities/index.ejs
+++ b/views/cities/index.ejs
@@ -3,14 +3,9 @@
 
 <div class="container content-container">
     
-    <header class="jumbotron">
-        <div class="container">
-            <h1>These are the cities</h1>    
-            <p>
-                <a class="btn btn-primary btn-lrg" href="/cities/new">Click here to add a city!</a>
-            </p>
-        </div>
-    </header>
+    <div class="container content-container">
+        <a class="btn btn-primary btn-block" href="/cities/new">Click here to add a city!</a>
+    </div>
     
     <!-- Create a grid of city pics and names -->
     <div class="row text-center" style="display: flex; flex-wrap: wrap">
