--- a/views/cities/new.ejs
+++ b/views/cities/new.ejs
@@ -1,6 +1,8 @@
 <% include ../partials/header %>
 
-<a class="ml-2" href="/cities">Back to the cities list</a>
+<a class="ml-2" href="/cities">
+    <i class="fas fa-chevron-circle-left"></i> Back to the cities list
+</a>
 <div class="container content-container">
     <h1 class="text-center">Submit another city:</h1>
     
