--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -1,7 +1,9 @@
 <% include ../partials/header %>
 
 <!-- Edit the comment-->
-<a class="ml-2" href="/cities/<%= city_id %>">Back to the city page </a>
+<a class="ml-2" href="/cities/<%= city_id %>">
+    <i class="fas fa-chevron-circle-left"></i> Back to the city page
+</a>
 <div class="container content-container">
     <h1 class="text-center">Edit your comment:</h1>
     
