--- a/views/cities/show.ejs
+++ b/views/cities/show.ejs
@@ -50,18 +50,18 @@
                 
                 <!--Loop for the comments-->
                 <% city.comments.forEach(function(comment){ %>
-                    <div class="row">
+                    <div class="row comment-row">
                         <div class="col-12">
                             <strong> <%= comment.author.username %>: </strong>
                             <span class="float-right"><em>1 day ago</em></span>
                             <br>
                             <p id="comment-text">
                                 &emsp; "<%= comment.text %>"
+                            </p>
                                 
                                 <!-- Only show the "Edit" and "Delete" buttons if user is authorized -->
                                 <% if (user && comment.author.id.equals(user._id)){ %> 
-                                    <form id="delete-comment-form" 
-                                          class="float-right"
+                                    <form class="float-right delete-comment-form"
                                           action="/cities/<%= city._id %>/comments/<%= comment._id %>?_method=DELETE" 
                                           method="POST">
                                         
@@ -69,10 +69,10 @@
                                             class="btn btn-sm btn-warning">
                                             Edit Comment
                                         </a>
-                                        <button class="btn btn-sm btn-danger">Delete Comment</button>
+                                        <button class="btn btn-sm btn-danger delete-comment-btn">Delete Comment</button>
                                     </form>
                                 <% } %>
-                            </p>
+                            
                             <br>
                             <br>
                         </div>
