--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,9 @@
 <% include partials/header %>
 
 <!-- Register username and password-->
-<a class="ml-2" href="/">Back to the home page </a>
+<a class="ml-2" href="/">
+    <i class="fas fa-chevron-circle-left"></i> Back to the home page 
+</a>
 <div class="container">
     <h1 class="text-center">Register:</h1>
     
