--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,10 +1,17 @@
 /* HTML Elements sorted alphabetically */
-html, body {
+html {
     height: 100%;
+    box-sizing: border-box;
+}
+
+body {
+    position: relative;
+    min-height: 100%;
+    padding-bottom: 1rem;
 }
 
 footer {
-    position: relative;
+    position: absolute;
     width: 100%;
     bottom: 0;
     text-align: center;
