updated landing-page image to fit all screen sizes

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -5,7 +5,7 @@
     <img id="landing-image" alt="picture of Rio" src="https://images.unsplash.com/photo-1472387040940-3ae0cdbf127d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=4aed91054fb429606c129dc3dd75acf2&auto=format&fit=crop&w=1256&q=80">
     <div id="landing-text">
         <h1 id="landing">Welcome to City Select!</h1>
-        <h3>We crowdsource information about living and traveling in various cities <br> in order to help your next move or vacation go smoothly!</h3>
+        <h3>We crowdsource information about living and traveling in various cities in order to help your next move or vacation go smoothly!</h3>
         
         <a class="btn btn-warning btn-lg" href="/cities">View all cities</a>
         
