--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,7 +27,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <!--Navbar items-->
-        <nav class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse">
             <!--Brand-->
             <a class="navbar-brand ml-2" href="/">City Select</a>
             
@@ -70,7 +70,7 @@
               
               <% }; %>
             
-        </nav> <!-- End Navbar items -->
+        </div> <!-- End Navbar items -->
         
     </nav> <!-- End Navbar -->
     
