--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -7,7 +7,7 @@ html {
 body {
     position: relative;
     min-height: 100%;
-    padding-bottom: 1rem;
+    padding-bottom: 0rem;
 }
 
 footer {
@@ -80,8 +80,6 @@ footer a {
     white-space: nowrap;
 }
 
-
-
 #landing {
     font-family: Pacifico;
 }
@@ -95,14 +93,16 @@ footer a {
 #landing-image {
     position: relative;
     width: 100%;
+    height: 100%;
+    min-width: 1250px;
 }
 
 #landing-text {
    position: absolute; 
    top: 200px; 
    left: 0; 
-   width: auto; 
-   margin: 0px 30px;
+   max-width: 600px;
+   margin: 0% 8%;
    color: white;
 }
 
@@ -114,4 +114,7 @@ footer a {
 
 #new-comment-btn {
     margin-top: 15px;
+}
+
+@media (max-width: 991px) {
 }
