--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
     <footer>
-         <a href="gvenezia.com">Gaetano Venezia</a> ––– 2018 
+         <a href="http://gvenezia.com/">Gaetano Venezia</a> ––– 2018 
     </footer>
     
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
