--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,23 +23,27 @@
       <!--Navbar-->
     <nav class="navbar navbar-toggleable-md navbar-inverse" id="main-nav">
         <!--Navbar toggle-->
-        <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-toggler-right mt-3" type="button" data-target="#nav-toggle-content"
+                data-toggle="collapse" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+        
+        <!--Brand-->
+        <a class="navbar-brand ml-2" href="/">City Select</a>
+        
         <!--Navbar items-->
-        <div class="collapse navbar-collapse">
-            <!--Brand-->
-            <a class="navbar-brand ml-2" href="/">City Select</a>
-            
+        <div class="collapse navbar-collapse" id="nav-toggle-content">
             <!-- Right-justified Login/Register/Logout -->
             <!-- Display depends on whether the user is logged in or not -->
             
+            
             <% if (user === undefined){ %>
               <!-- Login Form -->
-              <form class="navbar-nav form-inline ml-auto" action="/login" method="POST">
+              <form class="form-inline ml-auto" action="/login" method="POST">
                   <div class="input-group">
-                    <input type="text" class="form-control" name="username" placeholder="Username" aria-describedby="basic-addon1">
-                    <input type="password" class="form-control" name="password" placeholder="Password" aria-describedby="basic-addon1">
+                    <input class="form-control" type="text" name="username" placeholder="Username" aria-describedby="basic-addon1">
+                    <input class="form-control" type="password" name="password" placeholder="Password" aria-describedby="basic-addon1">
                   </div>
                   <button class="btn btn-success m-1 m-sm-1" type="submit">
                     Login <i class="fas fa-sign-in-alt"></i>
@@ -47,11 +51,13 @@
               </form> 
               
               <!-- Register Link Button -->
-              <div class="navbar-nav form-inline ml-0 mr-4">
-                <a href="/register" class="btn btn-warning m-1 m-sm-1" role="button">
-                  Register <i class="fas fa-user-plus"></i>
-                </a>
-              </div>
+              <ul class="navbar-nav ml-0 mr-4">
+                <li class="nav-item">
+                  <a href="/register" class="btn btn-warning m-1 m-sm-1" role="button">
+                    Register <i class="fas fa-user-plus"></i>
+                  </a>
+                </li>
+              </ul>
               
             <% } else { %>
               
