--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -36,16 +36,20 @@ footer a:hover {
 
 
 /* classes sorted alphabetically */
+.add-city-container {
+    margin: 15px 0px;
+}
+
 .comment-row:hover {
     background-color: #f2f2f2;
 }
 
 .container {
-    margin-top: 25px;
+    margin-top: 15px;
 }
 
 .content-container {
-    margin-bottom: 50px;
+    padding-bottom: 75px;
 }
 
 .delete-comment-btn:hover {
@@ -81,6 +85,11 @@ footer a:hover {
 
 
 /* Id's sorted alphabetically */
+#add-city-image {
+    max-width: 68%;
+    border: 4px lightgrey dashed;
+}
+
 #comment-text {
     display: inline;
     white-space: nowrap;
@@ -102,7 +111,6 @@ footer a:hover {
     padding: 0px;
     width: 100%;
     max-height: 80%;
-
 }
 
 #landing-image {
@@ -134,6 +142,16 @@ footer a:hover {
 
 #new-comment-btn {
     margin-top: 15px;
+}
+
+#vexels-link a,
+#vexels-link a:hover,
+#vexels-link a:active,
+#vexels-link a:visited
+{
+    text-decoration: none;
+    font-style: italic;
+    color: lightgrey;
 }
 
 @media (max-width: 991px) {
