--- a/views/cities/show.ejs
+++ b/views/cities/show.ejs
@@ -56,22 +56,22 @@
                             <span class="float-right"><em>1 day ago</em></span>
                             <br>
                             <p id="comment-text">
-                                &emsp; "<%= comment.text %>"
+                                "<%= comment.text %>"
                             </p>
                                 
-                                <!-- Only show the "Edit" and "Delete" buttons if user is authorized -->
-                                <% if (user && comment.author.id.equals(user._id)){ %> 
-                                    <form class="float-right delete-comment-form"
-                                          action="/cities/<%= city._id %>/comments/<%= comment._id %>?_method=DELETE" 
-                                          method="POST">
-                                        
-                                        <a  href="/cities/<%= city._id %>/comments/<%= comment._id %>/edit" 
-                                            class="btn btn-sm btn-warning">
-                                            Edit Comment
-                                        </a>
-                                        <button class="btn btn-sm btn-danger delete-comment-btn">Delete Comment</button>
-                                    </form>
-                                <% } %>
+                            <!-- Only show the "Edit" and "Delete" buttons if user is authorized -->
+                            <% if (user && comment.author.id.equals(user._id)){ %> 
+                                <form class="float-right delete-comment-form"
+                                      action="/cities/<%= city._id %>/comments/<%= comment._id %>?_method=DELETE" 
+                                      method="POST">
+                                    
+                                    <a  href="/cities/<%= city._id %>/comments/<%= comment._id %>/edit" 
+                                        class="btn btn-sm btn-warning">
+                                        Edit Comment
+                                    </a>
+                                    <button class="btn btn-sm btn-danger delete-comment-btn">Delete Comment</button>
+                                </form>
+                            <% } %>
                             
                             <br>
                             <br>
