--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-toggleable-md navbar-inverse" id="main-nav">
         <!--Navbar toggle-->
         <button class="navbar-toggler navbar-toggler-right mt-3" type="button" data-target="#nav-toggle-content"
-                data-toggle="collapse" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                data-toggle="collapse" aria-controls="#main-nav" aria-expanded="false"
                 aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -42,8 +42,8 @@
               <!-- Login Form -->
               <form class="form-inline ml-auto" action="/login" method="POST">
                   <div class="input-group">
-                    <input class="form-control" type="text" name="username" placeholder="Username" aria-describedby="basic-addon1">
-                    <input class="form-control" type="password" name="password" placeholder="Password" aria-describedby="basic-addon1">
+                    <input class="form-control" type="text" name="username" placeholder="Username">
+                    <input class="form-control" type="password" name="password" placeholder="Password">
                   </div>
                   <button class="btn btn-success m-1 m-sm-1" type="submit">
                     Login <i class="fas fa-sign-in-alt"></i>
