--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-toggleable-md navbar-inverse" id="main-nav">
         <!--Navbar toggle-->
         <button class="navbar-toggler navbar-toggler-right mt-3" id="toggle-nav" type="button" 
-                data-target="#nav-toggle-content" data-toggle="collapse" aria-controls="#toggle-nav" 
+                data-target="#nav-toggle-content" data-toggle="collapse" aria-controls="toggle-nav" 
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
