--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,8 +11,10 @@
         <div class="col-lg-5 col-md-6 col-sm-8">
             <form action="/register" method="POST">
                 <form class="form-group">
-                    <input class="form-control my-2" name="username" type="text" placeholder="Username">
-                    <input class="form-control my-2" name="password" type="password" placeholder="Password">
+                    <input  class="form-control my-2" name="username" type="text" placeholder="Username"
+                            pattern="[A-Za-z1-9].{3,15}" title="Please choose a username with 3 to 15 characters (special characters not allowed)" required>
+                    <input  class="form-control my-2" name="password" type="password" placeholder="Password"
+                            pattern="[A-Za-z1-9].{7,20}" title="Please use a password with 7 to 20 characters (special characters not allowed)" required>
                     <button class="btn btn-success btn-lg btn-block" type="submit">Submit</button> 
                 </form>
             </form>
